tests/negative/test_cn_asgn_cn_tuple_elem.orb
fnc makeFoo () (i32 i32) {
    sym f:(i32 i32);
    ret f;
};

fnc main () () {
    sym (f:((i32 i32) cn) (makeFoo));
    = ([] f 0) 1;
};